--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,9 @@ rvm:
   - 2.3.3
 cache: bundler
 
-before_script:
-  - chmod +x ./ci/cibuild  # or do this locally and commit
-
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-script: ./ci/cibuild
+script: .ci/build.sh
 
 env:
   global:
