--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ jobs:
       python: 3.6
       rvm: false
       services: false
+      env:
       cache: pip
       install: pip install moban
       script: .ci/check_moban.sh
