--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: ruby
 cache: bundler
 
 env:
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true  # Speeds installation of html-proofer
+
 jobs:
   include:
     - stage: moban
