--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ cache: bundler
 
 env:
   global:
-    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true  # Speeds installation of html-proofer
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES: true  # Speeds installation of html-proofer
 
 jobs:
   include:
