More pyenv setup

--- a/.moban.yaml
+++ b/.moban.yaml
@@ -3,11 +3,14 @@ overrides: coala.yaml
 language: ruby
 language_versions:
   - 2.5.1
-  - 2.6.3
 gitignore_language: Jekyll
 gitignore_extra_rulesets:
   - GitBook
 build_script: .ci/build.sh
+travis_os:
+  - linux
+  - osx
+  - windows
 
 requires:
   - https://gitlab.com/coala/mobans
