--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ notifications:
   email: false
 rvm:
   - 2.5.1
-  - 2.6.3
 
 stages:
   - test
@@ -33,6 +32,11 @@ stages:
   script:
     - moban
     - git diff --exit-code
+
+os:
+  - linux
+  - osx
+  - windows
 
 jobs:
   include:
@@ -70,7 +74,10 @@ before_install:
       elif [ "$TRAVIS_OS_NAME" == windows ]; then
         choco install python 3.6;
       else
-        pyenv install 3.6.6 && pyenv global 3.6.6;
+        echo "$PYENV_ROOT";
+        cd /opt/pyenv/ && git pull && cd -;
+        pyenv install -l;
+        pyenv install 3.6.3 && pyenv global 3.6.3;
       fi
       hash -r;
       sudo ln -sf $(which python3) $(which python);
