--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,6 @@ stages:
 os:
   - linux
   - osx
-  - windows
 
 jobs:
   include:
@@ -66,11 +65,12 @@ cache:
 before_install:
   - curl "${GRAVIS}.install-jdk-travis.sh" --output ~/.install-jdk-travis.sh
 
+  #brew install python3;
   - >
     if [ -z "$TRAVIS_PYTHON_VERSION" ]; then
-      set -x -e;
+      set -x;
       if [ "$TRAVIS_OS_NAME" == osx ]; then
-        brew install python3;
+        true;
       elif [ "$TRAVIS_OS_NAME" == windows ]; then
         choco install python 3.6;
       else
@@ -82,6 +82,8 @@ before_install:
       hash -r;
       sudo ln -sf $(which python3) $(which python);
       sudo ln -sf $(which pip3) $(which pip 2>/dev/null || echo /usr/bin/pip);
+      pip install --upgrade pip;
+      set -x;
     fi
 
   # See rationale in .ci/deps.python-packages.ps1 for pre-installing these
