--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ language: ruby
 notifications:
   email: false
 rvm:
+  - 2.4.3
   - 2.5.1
+  - 2.6
 
 stages:
   - test
@@ -63,6 +65,11 @@ cache:
     - ~/.jabba
 
 before_install:
+  - echo $PKG_CONFIG_PATH
+  # /usr/local/opt/libxml2/lib/pkgconfig:/usr/local/opt/libxml2/lib/pkgconfig
+  - pkg-config --cflags --libs libxml-2.0
+
+before_script:
   - curl "${GRAVIS}.install-jdk-travis.sh" --output ~/.install-jdk-travis.sh
 
   #brew install python3;
@@ -76,7 +83,6 @@ before_install:
       else
         echo "$PYENV_ROOT";
         cd /opt/pyenv/ && git pull && cd -;
-        pyenv install -l;
         pyenv install 3.6.3 && pyenv global 3.6.3;
       fi
       hash -r;
@@ -102,9 +108,6 @@ before_install:
   - which bundle
   - gem install bundler
   - which bundle
-
-before_script:
-  - true
 
 script:
   - .ci/build.sh
