--- a/.travis.yml
+++ b/.travis.yml
@@ -75,6 +75,7 @@ before_script:
   - pwd
   - curl "${GRAVIS}.install-jdk-travis.sh" --output ~/.install-jdk-travis.sh
   - pwd
+  - echo $TRAVIS_BUILD_DIR
 
   #brew install python3;
   - >
@@ -86,8 +87,9 @@ before_script:
         choco install python 3.6;
       else
         echo "$PYENV_ROOT";
-        cd /opt/pyenv/ && git pull && cd $TRAVIS_BUILD_DIR;
+        cd /opt/pyenv/ && git pull;
         pyenv install 3.6.3 && pyenv global 3.6.3;
+        cd $TRAVIS_BUILD_DIR;
       fi
       hash -r;
       sudo ln -sf $(which python3) $(which python);
