--- a/.travis.yml
+++ b/.travis.yml
@@ -83,6 +83,7 @@ before_script:
       set -e;
       if [ "$TRAVIS_OS_NAME" == osx ]; then
         brew install pkg-config libxml2;
+        gem install pkg-config;
       elif [ "$TRAVIS_OS_NAME" == windows ]; then
         choco install python 3.6;
       else
