--- a/.travis.yml
+++ b/.travis.yml
@@ -78,14 +78,15 @@ before_script:
   - pwd
   - echo $TRAVIS_BUILD_DIR
 
+  #if [ "$TRAVIS_OS_NAME" == osx ]; then
+  #      brew install pkg-config libxml2;
+  #      gem install pkg-config;
+  #    el
   #brew install python3;
   - >
     if [ -z "$TRAVIS_PYTHON_VERSION" ]; then
       set -e;
-      if [ "$TRAVIS_OS_NAME" == osx ]; then
-        brew install pkg-config libxml2;
-        gem install pkg-config;
-      elif [ "$TRAVIS_OS_NAME" == windows ]; then
+      if [ "$TRAVIS_OS_NAME" == windows ]; then
         choco install python 3.6;
       else
         echo "$PYENV_ROOT";
