--- a/.travis.yml
+++ b/.travis.yml
@@ -52,8 +52,6 @@ stage: test
 
 env:
   global:
-    - COALA_ZIP_URL=https://codeload.github.com/coala/coala/zip
-    - BEARS_ZIP_URL=https://codeload.github.com/coala/coala-bears/zip
     # Speeds installation of html-proofer
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
     - GRAVIS="https://raw.githubusercontent.com/DanySK/Gravis-CI/master/"
@@ -124,10 +122,10 @@ before_script:
 script:
   - pwd
   - .ci/build.sh
-  - curl -fsSL -o coala.zip $COALA_ZIP_URL/master
-  - pip install coala.zip
-  - curl -fsSL -o coala-bears.zip $BEARS_ZIP_URL/master
-  - pip install coala-bears.zip[alldeps]
+  - pip install moban
+  - python -m moban -t coala-gitignore.jj2 -o .gitignore
+  - pip install ~/.cache/moban/repos/coala
+  - pip install ~/.cache/moban/repos/coala-bears[alldeps]
   - coala --non-interactive
 
 branches:
